--- a/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
@@ -2,6 +2,7 @@
     x:Class="HomeHelper.Controls.EditConsumUtilitateUserControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:storeAppControl="using:StoreAppLib.Controls"
     xmlns:local="using:HomeHelper.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -23,7 +24,7 @@
         <TextBlock Text="Utilitate" Margin="10" Grid.Column="0" Grid.Row="0"></TextBlock>
         <TextBox Name="txtUtilitate" Text="{Binding IdUtilitate}" Margin="10" Grid.Row="0" Grid.Column="1"></TextBox>
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
-        <local:MyDateTimePicker Grid.Row="1" Grid.Column="1" Margin="10" x:Name="dtpLocal" SelectedDate="{Binding DataConsum}" ></local:MyDateTimePicker>
+        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataConsum}" x:Name="dtpLocal" ></storeAppControl:DatePicker>
         <TextBlock Text="Consum" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
         <TextBox Name="txtConsum" Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ValoareConsum }"></TextBox>
        
