--- a/HomeHelper/Common/StandardStyles.xaml
+++ b/HomeHelper/Common/StandardStyles.xaml
@@ -10,7 +10,8 @@
 
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:dc="using:WinRTXamlToolkit.Controls.DataVisualization.Charting">
 
     <!-- Non-brush values that vary across themes -->
 
@@ -40,6 +41,9 @@
         <Setter Property="Typography.DiscretionaryLigatures" Value="True"/>
         <Setter Property="Typography.CaseSensitiveForms" Value="True"/>
     </Style>
+
+
+
 
     <Style x:Key="BaselineRichTextStyle" TargetType="RichTextBlock" BasedOn="{StaticResource BasicRichTextStyle}">
         <Setter Property="LineHeight" Value="20"/>
