--- a/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
@@ -22,9 +22,9 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10" Grid.Column="0" Grid.Row="0"></TextBlock>
-        <TextBox Name="txtUtilitate" Text="{Binding IdUtilitate}" Margin="10" Grid.Row="0" Grid.Column="1"></TextBox>
+        <ComboBox Name="cmbUtilitate" IsEnabled="False"  SelectedValue="{Binding IdUtilitate}"  Grid.Row="0" Margin="10" Grid.Column="1"></ComboBox>
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
-        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataConsum}" x:Name="dtpLocal" ></storeAppControl:DatePicker>
+        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataConsum}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
         <TextBlock Text="Consum" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
         <TextBox Name="txtConsum" Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ValoareConsum }"></TextBox>
        
