Finalizat controlu de alerta.

--- a/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
@@ -17,6 +17,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10" Grid.Row="0" Grid.Column="0"></TextBlock>
