--- a/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
@@ -21,8 +21,8 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10" Grid.Row="0" Grid.Column="0"></TextBlock>
-        <ComboBox Name="cmbUtilitate" Margin="10" SelectedValue="{Binding IdUtilitate}" Grid.Row="0" Grid.Column="1"></ComboBox>
+        <ComboBox Name="cmbUtilitate" Margin="10" SelectedValue="{Binding IdUitlitate}" Grid.Row="0" Grid.Column="1"></ComboBox>
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
-        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataConsum}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
+        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataAlerta}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
     </Grid>
 </UserControl>
