Folosit 2 way binding pentru partea asta de alerta.

--- a/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
@@ -22,9 +22,9 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10" Grid.Row="0" Grid.Column="0"></TextBlock>
-        <ComboBox Name="cmbUtilitate" Margin="10" SelectedValue="{Binding IdUitlitate}" Grid.Row="0" Grid.Column="1"></ComboBox>
+        <ComboBox Name="cmbUtilitate" Margin="10" SelectedValue="{Binding IdUitlitate, Mode=TwoWay}" Grid.Row="0" Grid.Column="1"></ComboBox>
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
-        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataAlerta}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
+        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataAlerta, Mode=TwoWay}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
         <storeAppControl:TimePicker Grid.Column="1" Grid.Row="2" Time="{Binding DataAlerta, Mode=TwoWay}" Format="hh:mm:ss" Name="tmLoca"></storeAppControl:TimePicker>
     </Grid>
 </UserControl>
