--- a/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
@@ -22,11 +22,11 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10" Grid.Column="0" Grid.Row="0"></TextBlock>
-        <ComboBox Name="cmbUtilitate"   SelectedValue="{Binding IdUtilitate}"  Grid.Row="0" Margin="10" Grid.Column="1"></ComboBox>
+        <ComboBox Name="cmbUtilitate"   SelectedValue="{Binding IdUtilitate, Mode=TwoWay}"  Grid.Row="0" Margin="10" Grid.Column="1"></ComboBox>
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
-        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataConsum}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
+        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataConsum, Mode=TwoWay}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
         <TextBlock Text="Consum" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
-        <TextBox Name="txtConsum" Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ValoareConsum }"></TextBox>
+        <TextBox Name="txtConsum" Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ValoareConsum, Mode=TwoWay }"></TextBox>
        
     </Grid>
 </UserControl>
