--- a/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl
+﻿<UserControl xmlns:Input="using:Syncfusion.UI.Xaml.Controls.Input" 
     x:Class="HomeHelper.Controls.EditConsumUtilitateUserControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:storeAppControl="using:StoreAppLib.Controls"
     xmlns:local="using:HomeHelper.Controls"
+    xmlns:syncf="using:Syncfusion.UI.Xaml.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -24,9 +25,10 @@
         <TextBlock Text="Utilitate" Margin="10" Grid.Column="0" Grid.Row="0"></TextBlock>
         <ComboBox Name="cmbUtilitate"   SelectedValue="{Binding IdUtilitate, Mode=TwoWay}"  Grid.Row="0" Margin="10" Grid.Column="1"></ComboBox>
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
-        <storeAppControl:DatePicker Grid.Column="1" Grid.Row="1" Date="{Binding DataConsum, Mode=TwoWay}" x:Name="dtpLocal" Margin="10" ></storeAppControl:DatePicker>
+       
+        <Input:DatePicker Grid.Column="1" Grid.Row="1" Value="{Binding DataConsum, Mode=TwoWay}" Margin="10" />
         <TextBlock Text="Consum" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
-        <TextBox Name="txtConsum" Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ValoareConsum, Mode=TwoWay }"></TextBox>
+        <Input:NumericTextBox Name="txtConsum" Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ValoareConsum, Mode=TwoWay }"></Input:NumericTextBox>
        
     </Grid>
 </UserControl>
