Adaugat binding in viewmodel la adaugare alerta.

--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -406,7 +406,7 @@
                     <StackPanel Orientation="Vertical" Margin="100,-300,0,0">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Alerte" Padding="30" FontSize="20"></TextBlock>
-                            <Button Name="btnAddAlerta" Style="{StaticResource AddAppBarButtonStyle}" ></Button>
+                            <Button Name="btnAddAlerta" Style="{StaticResource AddAppBarButtonStyle}" Command="{Binding AdaugaAlertaCommand}"></Button>
                         </StackPanel>
                         <ListView Name="itemListAlerte" DataContext="{Binding AlerteUtilitati}" SelectedItem="{Binding AlertaSelectata,Mode=TwoWay}" Background="Blue">
                             <ListView.ItemTemplate>
