Adaugat comenzii de adaugare la alerta.

--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -408,7 +408,9 @@
                             <TextBlock Text="Alerte" Padding="30" FontSize="20"></TextBlock>
                             <Button Name="btnAddAlerta" Style="{StaticResource AddAppBarButtonStyle}" Command="{Binding AdaugaAlertaCommand}"></Button>
                         </StackPanel>
-                        <ListView Name="itemListAlerte" ItemsSource="{Binding AlerteUtilitati}" SelectedItem="{Binding AlertaSelectata,Mode=TwoWay}" Background="Blue">
+                        <ListView Name="itemListAlerte" ItemsSource="{Binding AlerteUtilitati}"  SelectedItem="{Binding AlertaSelectata,Mode=TwoWay}" Background="Blue"
+                                  common:ListViewClickCommand.Command="{Binding EditeazaAlertaCommand }" IsItemClickEnabled="True"
+                                  >
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Vertical">
