--- a/HomeHelper/Common/StandardStyles.xaml
+++ b/HomeHelper/Common/StandardStyles.xaml
@@ -447,6 +447,11 @@
         <Setter Property="AutomationProperties.Name" Value="Delete"/>
         <Setter Property="Content" Value="&#xE106;"/>
     </Style>
+    <Style x:Key="CancelAppBarButtonStyle" TargetType="ButtonBase" BasedOn="{StaticResource AppBarButtonStyle}">
+        <Setter Property="AutomationProperties.AutomationId" Value="CancelAppBarButton"/>
+        <Setter Property="AutomationProperties.Name" Value="Cancel"/>
+        <Setter Property="Content" Value="&#xE10A;"/>
+    </Style>
     <Style x:Key="DiscardAppBarButtonStyle" TargetType="ButtonBase" BasedOn="{StaticResource AppBarButtonStyle}">
         <Setter Property="AutomationProperties.AutomationId" Value="DiscardAppBarButton"/>
         <Setter Property="AutomationProperties.Name" Value="Discard"/>
