--- a/HomeHelper/Controls/EditUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditUtilitateUserControl.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl
+﻿
+    <UserControl
         x:Class="HomeHelper.Controls.EditUtilitateUserControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,11 +9,10 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-
+    Height="300"
+    Width="400"
     >
-    
-    <Grid
-         >
+        <Grid Background="Black">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="130"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -21,12 +21,21 @@
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10"></TextBlock>
-        <TextBox Name="txtUtilitate" Margin="10" Grid.Row="0" Grid.Column="1" Text="{Binding DenumireUtilitate, Mode=TwoWay}"></TextBox>
+        <TextBox Name="txtUtilitate" Margin="10" Grid.Row="0" Grid.Column="1" Text="{Binding ObiectInBinding.DenumireUtilitate, Mode=TwoWay}"></TextBox>
         <TextBlock Text="Unitate Masura" Margin="10" Grid.Row="1" Grid.Column="0"></TextBlock>
-        <TextBox Name="txtUnitate" Margin="10" Grid.Row="1" Grid.Column="1" Text="{Binding  UnitateMasura, Mode=TwoWay}"></TextBox>
+        <TextBox Name="txtUnitate" Margin="10" Grid.Row="1" Grid.Column="1" Text="{Binding  ObiectInBinding.UnitateMasura, Mode=TwoWay}"></TextBox>
         <TextBlock Text="Valoare Initiala" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
-        <TextBox Name="txtValoareInitiala" Grid.Row="3" Grid.Column="1" Margin="10"  Text="{Binding ValoareInitiala, Mode=TwoWay}"></TextBox>        
+        <TextBox Name="txtValoareInitiala" Grid.Row="2" Grid.Column="1" Margin="10"  Text="{Binding ObiectInBinding.ValoareInitiala, Mode=TwoWay}"></TextBox>    
+        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
+        <Button  Style="{StaticResource SaveAppBarButtonStyle}" Command="{Binding SaveCommand}"></Button>
+        <Button  Style="{StaticResource DeleteAppBarButtonStyle}" Visibility="{Binding ShowDelete, Mode=TwoWay, Converter={StaticResource booleanToVisibilityConverter}}" Command="{Binding DeleteCommand}"></Button>
+        <Button  Style="{StaticResource CancelAppBarButtonStyle}" Command="{Binding CancelCommand}"></Button>  
+        </StackPanel>
     </Grid>
+   
+
 </UserControl>
