--- a/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
@@ -9,9 +9,12 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+         Height="300"
+    Width="400"     
+             >
     
-    <Grid>
+    <Grid Background="Black">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="120"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -20,15 +23,25 @@
            <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10" Grid.Column="0" Grid.Row="0"></TextBlock>
-        <ComboBox Name="cmbUtilitate"   SelectedValue="{Binding IdUtilitate, Mode=TwoWay}"  Grid.Row="0" Margin="10" Grid.Column="1"></ComboBox>
+        <ComboBox  
+            ItemsSource="{Binding ListaUtilitati}" 
+            DisplayMemberPath="DenumireUtilitate"
+            SelectedValuePath="IdUtilitati"
+            SelectedValue="{Binding ObiectInBinding.IdUtilitate, Mode=TwoWay}" 
+                    IsEnabled="{Binding IsEnabledCombobox}" 
+                   Grid.Row="0" Margin="10" Grid.Column="1"></ComboBox>
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
-       
-        <Input:DatePicker Grid.Column="1" Grid.Row="1" Value="{Binding DataConsum, Mode=TwoWay}" Margin="10" />
-        <TextBlock Text="Consum" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
-        <Input:NumericTextBox Name="txtConsum" Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ValoareConsum, Mode=TwoWay }"></Input:NumericTextBox>
-       
+        <Input:DatePicker Grid.Column="1" Grid.Row="1" Value="{Binding ObiectInBinding.DataConsum, Mode=TwoWay}" Margin="10" />
+        <TextBlock  Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
+        <Input:NumericTextBox Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ObiectInBinding.ValoareConsum, Mode=TwoWay }"></Input:NumericTextBox>
+        <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal">
+            <Button  Style="{StaticResource SaveAppBarButtonStyle}" Command="{Binding SaveCommand}"></Button>
+            <Button  Style="{StaticResource DeleteAppBarButtonStyle}" Visibility="{Binding ShowDelete, Mode=TwoWay, Converter={StaticResource booleanToVisibilityConverter}}" Command="{Binding DeleteCommand}"></Button>
+            <Button  Style="{StaticResource CancelAppBarButtonStyle}" Command="{Binding CancelCommand}"></Button>
+        </StackPanel>
     </Grid>
 </UserControl>
